# goldilocks-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.agents/skills/architecture/: SKILL.md
.agents/skills/catchup/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/dft-basics/: SKILL.md
.agents/skills/dft-basics/references/: k-points.md
.agents/skills/dft-basics/skill-workspace/: evals.md
.agents/skills/dft-basics/skill-workspace/iteration-1/: notes.md
.agents/skills/github-cli/: SKILL.md
.agents/skills/github-projects/: SKILL.md
.agents/skills/make-a-pr/: SKILL.md
.agents/skills/plan/: SKILL.md
.agents/skills/report/: SKILL.md
.agents/skills/use-uv/: SKILL.md
.agents/skills/write-a-test/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  cli.md  index.md  package_walkthrough_zh.md
docs/api/: advise.md  analyse.md  generate.md  intent.md  kmesh.md  ml.md  pseudo.md
src/goldilocks_core/: __init__.py  intent.py  kmesh.py
src/goldilocks_core/advise/: __init__.py  basis.py  kpoints.py  phonon.py  pipeline.py  protocol.py  pseudo.py  smearing.py  spin.py  types.py  vdw.py
src/goldilocks_core/advisors/: __init__.py  kmesh_advisor.py  kpoints.py  pp_advisor.py
src/goldilocks_core/aiida/: __init__.py  convert.py  pseudo.py  qe.py  results.py  status.py  submit.py
src/goldilocks_core/analyse/: structure.py
src/goldilocks_core/cli/: __init__.py  _parse.py  cli_kmesh.py  main.py
src/goldilocks_core/cli/commands/: __init__.py  input.py
src/goldilocks_core/cli/wizard/: __init__.py  _context.py  hpc.py  input_kit.py  main.py  parse.py  pre_analysis.py  visualise.py
src/goldilocks_core/data/: __init__.py
src/goldilocks_core/data/models/kpoints/1.0/: manifest.json
src/goldilocks_core/data/models/magnetic_classifier/1.0/: magnetic_clf.pt  (+1 more)
src/goldilocks_core/generate/: qe.py
src/goldilocks_core/helpers/: __init__.py  structures.py  types.py
src/goldilocks_core/io/: __init__.py  db_search.py  structures.py
src/goldilocks_core/kpoints/: __init__.py  advisor.py  features.py  kmesh.py
src/goldilocks_core/ml/: __init__.py  features.py  inference.py  loader.py  magnetic.py  models.py  types.py
src/goldilocks_core/ml/kpoints/: alignn.py  alignn_graph.py  atom_features.py  cgcnn.py  cgcnn_graph.py  features.py  predictor.py
src/goldilocks_core/mlip/: __init__.py  phonon.py  preview.py  relax.py  types.py
src/goldilocks_core/processing/: kmesh.py
src/goldilocks_core/pseudo/: download.py  parse_upf.py  policy.py  pp_metadata.py  pp_policy.py  pp_registry.py  pp_selector.py  registry.py
src/goldilocks_core/results/: __init__.py  check.py  plot.py  types.py
src/goldilocks_core/results/local/: qe.py
src/goldilocks_core/select/: __init__.py  qe.py
src/goldilocks_core/shared/: types.py
src/goldilocks_core/structure/: __init__.py  features.py  io.py  match.py
tests/: test_advise_smearing.py  test_advise_spin.py  test_advise_vdw.py  test_aiida_convert.py  test_cli_input.py  test_cli_kmesh.py  test_generate_qe.py  test_k_mesh_advisor.py  test_kmesh.py  test_ml_features.py  test_ml_inference.py  test_ml_models.py  test_mlip_types.py  test_parse_upf.py  test_pp_policy.py  test_pseudo_policy.py  test_pseudo_registry.py  test_results_check.py  test_results_local_qe.py  test_results_types.py  test_structures.py
tests/fixtures/structures/: Fe_bcc.cif
(+1 files in other folders)
